--- a/lambda/analyze_id_generatecsv/Dockerfile
+++ b/lambda/analyze_id_generatecsv/Dockerfile
@@ -3,7 +3,7 @@ RUN /var/lang/bin/python -m pip install --upgrade pip
 RUN python -m pip install schadem-tidp-manifest==0.0.8 marshmallow amazon-textract-response-parser amazon-textract-prettyprinter==0.0.16 --target "${LAMBDA_TASK_ROOT}"
 
 # Copy function code
-COPY app/* ${LAMBDA_TASK_ROOT}/
+COPY app/ ${LAMBDA_TASK_ROOT}/
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "main.lambda_handler" ]
