--- a/lambda/opensearch_push/Dockerfile
+++ b/lambda/opensearch_push/Dockerfile
@@ -1,6 +1,6 @@
 FROM public.ecr.aws/lambda/python:3.9-x86_64
 RUN /var/lang/bin/python -m pip install --upgrade pip
- RUN python -m pip install opensearch-py --target "${LAMBDA_TASK_ROOT}"
+RUN python -m pip install opensearch-py "urllib3<2" --target "${LAMBDA_TASK_ROOT}"
 
 # Copy function code
 COPY app/* ${LAMBDA_TASK_ROOT}/
